Removed extra css and reverted styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,670 +1,10 @@
-.comment-area {
-  background-color: #fff;
-  border: 1px solid #e4e4e4;
-  margin-top: 1em;
-  margin-bottom: 7px;
-  padding-left: 10px;
-  border-radius: 4px;
-}
-.comment-area .comment-form {
-  width: 100%;
-  margin: 5px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-}
-.comment-area .comment-form .actions-container {
-  display: flex;
-  flex-direction: column;
-}
-.comment-area .comment-form .actions-container .btn {
-  margin-right: 10px;
-}
-.comment-area .comment-form .textarea-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.comment-area .comment-form .textarea-container textarea {
-  height: 66px;
-  width: 100%;
-  border: none;
-  outline: none;
-  resize: none;
-  font-size: 13px;
-}
-.comment-area .comment-form .textarea-container .error-area {
-  color: red;
-  font-size: 12px;
-}
-#main-group--editable {
-  display: none;
-}
-.main-group {
-  display: flex;
-  justify-content: flex-start;
-}
-.main-group .info-panel {
-  margin-left: 20px;
-  margin-top: 10px;
-}
-.main-group .info-panel .title {
-  font-size: 32px;
-  font-weight: 600;
-}
-.main-group .info-panel .handle {
-  margin-top: 10px;
-  color: #4c7478;
-  font-size: 22px;
-}
-.main-group .info-panel .description {
-  margin-top: 10px;
-  font-size: 16px;
-}
-.main-group .info-panel .description textarea {
-  height: 130px;
-  line-height: 2em;
-}
-.main-group .icon-panel {
-  display: flex;
-  flex-direction: column;
-  padding: 10 30 10 30;
-}
-.main-group .icon-panel .actions {
-  display: flex;
-}
-.main-group .icon-panel .actions > * {
-  margin-top: 8px;
-}
-.main-group .icon-panel .edit-club {
-  justify-content: space-around;
-}
-.main-group .icon-panel .change-icon {
-  justify-content: center;
-}
-.main-group .icon {
-  display: flex;
-  justify-content: center;
-}
-.main-group .icon .edit-button {
-  z-index: 2;
-  position: absolute;
-  right: 8px;
-  top: 10px;
-  margin: auto;
-  background-color: #3fb0ac;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-}
-.main-group .icon .edit-button .edit-icon {
-  color: #fff;
-  margin-top: 6px;
-  margin-left: 8px;
-}
-.main-group .icon .cancel-edit {
-  background-color: red !important;
-}
-.main-group .icon img {
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  margin-right: auto;
-  margin-left: auto;
-}
-.main-group .group-membership {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-.main-group .hover-button {
-  width: 75%;
-}
-.main-group .hover-button:focus,
-.main-group .hover-button:hover {
-  background-color: red;
-}
-.main-group .hover-button:focus .unfocused-text,
-.main-group .hover-button:hover .unfocused-text {
-  display: none;
-}
-.main-group .hover-button:focus .focused-text,
-.main-group .hover-button:hover .focused-text {
-  display: block;
-}
-.main-group .hover-button .unfocused-text {
-  color: black;
-  display: block;
-}
-.main-group .hover-button .focused-text {
-  color: white;
-  display: none;
-}
-.group-member {
-  display: flex;
-  justify-content: flex-start;
-  margin-top: 5px;
-}
-.group-member .info {
-  display: flex;
-  flex-direction: column;
-  margin-left: 8px;
-  margin-top: 8px;
-  overflow: hidden;
-  white-space: nowrap;
-}
-.group-member .info .display-name a {
-  color: #173e43;
-  font-weight: 600;
-}
-.group-member .info .display-name a div {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.group-member .info .user-name a {
-  color: #4c7478;
-  font-size: 12px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.group-member .info .user-name a div {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.group-member div.icon {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-}
-.group-member img.icon {
-  border-radius: 50%;
-  width: 48px;
-  height: 48px;
-}
-.group-reading {
-  padding-bottom: 10px;
-}
-.group-reading .actions {
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-}
-.group-reading .info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-right: 8px;
-  margin-left: 8px;
-}
-.group-reading .icon img {
-  height: 150px;
-}
-.group-wishlist .actions {
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-}
-.group-wishlist .section-name {
-  margin-top: 8px;
-  margin-left: 12px;
-  font-size: 16px;
-}
-.group-wishlist .selected-book .book {
-  display: flex;
-  flex-direction: column;
-  margin-left: 8px;
-  margin-right: 8px;
-}
-.group-wishlist .selected-book .book .info .title {
-  text-decoration: none;
-  font-size: 16px;
-}
-.group-wishlist .selected-book .book .info .title:focus,
-.group-wishlist .selected-book .book .info .title:hover {
-  text-decoration: none;
-}
-.group-wishlist .selected-book .book .info .author {
-  font-size: 14px;
-}
-.group-wishlist .selected-book .book .info .author a {
-  text-decoration: none;
-}
-.group-wishlist .selected-book .book .icon img {
-  height: 80px;
-}
-.group-wishlist .list {
-  margin-top: 8px;
-}
-.group-wishlist .list .selected {
-  background-color: #e4e4e4;
-}
-.group-wishlist .list .book {
-  display: flex;
-  border-top: 1px solid #e4e4e4;
-}
-.group-wishlist .list .book .info {
-  display: flex;
-  flex-direction: column;
-  margin-left: 8px;
-}
-.group-wishlist .list .book .info .title {
-  font-size: 14px;
-  margin-top: 5px;
-  margin-bottom: 4px;
-}
-.group-wishlist .list .book .info .author {
-  font-size: 10px;
-}
-.group-wishlist .list .book .icon img {
-  height: 50px;
-  margin: 2px;
-  margin-right: 0;
-}
-.main-book {
-  display: flex;
-  flex-direction: column;
-}
-.main-book .book {
-  display: flex;
-}
-.main-book .actions {
-  display: flex;
-  justify-content: flex-end;
-  font-size: 56px;
-  margin-bottom: 10px;
-  margin-top: 15px;
-  border-top: 1px solid #e4e4e4;
-}
-.main-book .actions .action {
-  margin-right: 15px;
-  margin-top: 15px;
-  color: #173e43;
-}
-.main-book .actions .action:hover,
-.main-book .actions .action:focus {
-  color: #fae596;
-}
-.main-book .actions .action.active {
-  color: #3fb0ac;
-}
-.main-book .actions .action.active {
-  color: #3fb0ac;
-}
-.main-book .info {
-  display: flex;
-  flex-direction: column;
-}
-.main-book .info .title {
-  font-size: 32px;
-  font-weight: 600;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-.main-book .info .author {
-  font-size: 24px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-.main-book .info .rating {
-  display: flex;
-  color: #fae596;
-  font-size: 26px;
-}
-.main-book .icon img {
-  height: 200px;
-}
-.book-prologes .prologe {
-  margin-top: 15px;
-}
-.book-prologes .prologe .panel-content {
-  display: flex;
-}
-.book-prologes .prologe .content {
-  display: flex;
-  flex-direction: column;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-.book-prologes .prologe .content .prologue {
-  font-size: 14px;
-  color: #173e43;
-}
-.book-prologes .prologe .content .rating {
-  margin-top: 8px;
-}
-.book-prologes .prologe .content .signature {
-  margin-top: 8px;
-  display: flex;
-  justify-content: flex-end;
-}
-.book-prologes .icon {
-  align-items: flex-start;
-  margin-top: 10px;
-}
-.book-prologes .icon img {
-  height: 70px;
-  width: 70px;
-  border-radius: 50%;
-}
-.similarity {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 8px;
-}
-.similarity .voting.enabled .up:hover,
-.similarity .voting.enabled .up:focus {
-  opacity: 0.4;
-  color: #3fb0ac;
-}
-.similarity .voting.enabled .down:hover,
-.similarity .voting.enabled .down:focus {
-  opacity: 0.4;
-  color: red;
-}
-.similarity .voting {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-top: 6px;
-  margin-bottom: 6px;
-  margin-left: 8px;
-  margin-right: 8px;
-  color: #dddfd4;
-}
-.similarity .voting .up,
-.similarity .voting .down {
-  font-size: 26px;
-}
-.similarity .voting .up.voted {
-  color: #3fb0ac;
-}
-.similarity .voting .down.voted {
-  color: red;
-}
-.similarity .voting .counter {
-  font-size: 20px;
-}
-.similarity .book {
-  margin-left: 7px;
-  margin-right: 7px;
-  display: flex;
-}
-.similarity .book .info {
-  margin-top: 10px;
-  margin-left: 8px;
-  display: flex;
-  flex-direction: column;
-}
-.similarity .book .info .title {
-  font-size: 20px;
-  font-weight: 500;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.similarity .book .icon {
-  min-width: 57px;
-}
-.similarity .book .icon img {
-  height: 75px;
-}
-.suggest-similar .collapsible-button {
-  font-size: 18px;
-  color: #173e43;
-  margin-top: 8px;
-  margin-left: 22px;
-  margin-right: 10px;
-}
-.suggest-similar .my-readings {
-  display: flex;
-  flex-direction: column;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-.suggest-similar .my-readings .suggestion {
-  margin-bottom: 8px;
-  display: flex;
-  justify-content: space-between;
-}
-.suggest-similar .my-readings .suggestion .actions {
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-.suggest-similar .my-readings .suggestion .book {
-  display: flex;
-  margin-right: 7px;
-  margin-left: 7px;
-}
-.suggest-similar .my-readings .suggestion .book .info {
-  display: flex;
-  flex-direction: column;
-  margin-left: 8px;
-  margin-top: 8px;
-}
-.suggest-similar .my-readings .suggestion .book .info .title {
-  font-size: 16px;
-  font-weight: 400;
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-.suggest-similar .my-readings .suggestion .book .icon {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.suggest-similar .my-readings .suggestion .book .icon img {
-  height: 62px;
-  min-width: 57px;
-}
-.suggest-similar .filter {
-  margin-left: 16px;
-  margin-right: 10px;
-  margin-top: 10px;
-}
-.suggest-similar .filter .instructions {
-  font-size: 16px;
-  color: #5d7679;
-}
-.main-author {
-  margin-top: 3em;
-}
-.main-author .info {
-  text-align: center;
-}
-.main-author .info .title {
-  font-size: 30px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.main-author .center-icon {
-  text-align: center;
-}
-.main-author .center-icon img {
-  height: 80px;
-  width: 80px;
-  margin-top: -3.4em;
-  border-radius: 50%;
-  background-color: #173e43;
-}
-.author-books {
-  margin-top: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-.author-books .book {
-  margin-top: 3em;
-  margin-bottom: 15px;
-}
-.author-books .book .rating {
-  display: flex;
-  justify-content: center;
-  color: #fae596;
-  margin-bottom: 15px;
-}
-.author-books .book .info {
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 10px;
-  margin-bottom: 8px;
-  white-space: nowrap;
-}
-.author-books .book .info .title {
-  font-size: 20px;
-}
-.author-books .book .info .title a > * {
-  max-width: 280px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.author-books .book .icon {
-  text-align: center;
-}
-.author-books .book .icon img {
-  margin-top: -3.4em;
-  height: 80px;
-  width: auto;
-  min-width: 57px;
-  background-color: #173e43;
-}
-.main-profile {
-  display: flex;
-  padding: 25px;
-}
-.main-profile .info {
-  margin-left: 22px;
-}
-.main-profile .info .section {
-  font-size: 18px;
-}
-.main-profile .info .section .field-name {
-  margin-left: 6px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.main-profile .info .section .field-value {
-  display: flex;
-}
-.main-profile .info .section .field-value .display-name {
-  color: #173e43;
-  font-size: 24px;
-}
-.main-profile .info .section .field-value .username {
-  color: #4c7478;
-  font-size: 20px;
-}
-.main-profile .info .section .field-value .action {
-  margin-left: 10px;
-  font-size: 26px;
-  color: #173e43;
-}
-.main-profile .icon-section {
-  display: flex;
-  flex-direction: column;
-}
-.main-profile .icon-section .actions {
-  display: flex;
-  margin-top: 8px;
-}
-.main-profile .icon-section .change-icon {
-  justify-content: center;
-}
-.main-profile .icon-section .edit-avatar {
-  justify-content: space-around;
-}
-.main-profile .icon-section .croppable-wrapper {
-  max-height: 300px;
-}
-.main-profile .icon-section .icon img {
-  border-radius: 50%;
-  width: 250px;
-  height: 250px;
-}
-.main-user {
-  display: flex;
-  padding: 25px;
-}
-.main-user .info {
-  margin-left: 18px;
-}
-.main-user .info .username {
-  font-size: 16px;
-  color: #4c7478;
-}
-.main-user .info .display-name {
-  font-weight: 500;
-  font-size: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  color: #173e43;
-}
-.main-user .icon img {
-  height: 160px;
-  width: 160px;
-  border-radius: 50%;
-}
-.user-prologes {
-  display: flex;
-  flex-wrap: wrap;
-}
-.user-prologes .prologe {
-  margin-top: 15px;
-  margin-right: 10px;
-  display: flex;
-  padding: 15px;
-  width: 90%;
-  align-self: center;
-}
-.user-prologes .prologe .content {
-  margin-left: 10px;
-  margin-top: 5px;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.user-prologes .prologe .content .prologue {
-  flex-grow: 1;
-}
-.user-prologes .prologe .content .title {
-  font-size: 16px;
-  margin-bottom: 5px;
-}
-.user-prologes .prologe .content .rating {
-  margin-top: 8px;
-  display: flex;
-  justify-content: flex-end;
-}
-.user-prologes .prologe .icon {
-  align-self: flex-start;
-}
-.user-prologes .prologe .icon img {
-  height: 100px;
-}
 body {
-  background-color: #fafafa!important;
-  font-family: Raleway, sans-serif;
-  font-size: 12px!important;
+  background-color: #fafafa !important;
+  font-family: Lato, sans-serif;
+  font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5em;
-}
-.no-padding {
-  padding: 0 !important;
-}
-.no-pad-right {
-  padding-right: 0!important;
-}
-.no-pad-left {
-  padding-left: 0!important;
-}
-.reduced-padding {
-  padding-left: 6px;
-  padding-right: 6px;
 }
 /* Here goees the navbar */
 .header .navbar {
@@ -675,194 +15,10 @@ body {
 }
 .header .navbar img.logo {
   height: 3em;
-  position: relative;
-  top: 12px;
-  left: 6px;
 }
 .header .navbar .navbar-nav > li > a {
   color: #ffffff;
 }
 .container {
-  position: relative;
-}
-.prlg-panel {
-  font-family: Lora;
-  text-align: center;
-  padding-top: 300px;
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-.btn.main-btn {
-  background-color: #3fb0ac;
-  color: #fff;
-}
-.btn.main-btn:focus,
-.btn.main-btn:hover {
-  background-color: #173e43;
-  color: #fff;
-}
-.editable-area .wrapper {
-  border: 2px dashed #3fb0ac;
-}
-.editable-area .wrapper input,
-.editable-area .wrapper textarea {
-  border: none;
-  outline: none;
-  resize: none;
-  margin-top: 1px!important;
-  margin-left: 2px;
-  margin-right: 1px;
-  width: 99%;
-}
-.upload-btn input {
-  width: 0.1px;
-  height: 0.1px;
-  opacity: 0;
-  overflow: hidden;
-  position: absolute;
-  z-index: -1;
-}
-.upload-btn label {
-  color: #fff;
-  background-color: #3fb0ac;
-}
-.upload-btn label:focus,
-.upload-btn label:hover {
-  background-color: #173e43;
-  color: #fff;
-}
-.btn.submit-btn {
-  background-color: #3fb0ac;
-  color: #fff;
-}
-.btn.submit-btn:focus,
-.btn.submit-btn:hover {
-  background-color: #173e43;
-  color: #fff;
-}
-.title {
-  color: #173e43;
-}
-.title a {
-  color: #173e43;
-}
-.title a:hover,
-.title a:focus {
-  color: #3fb0ac;
-  text-decoration: none;
-}
-.icon {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-}
-.nav-tabs.underline-tabs {
-  margin: 1em;
-  background-color: #fafafa;
-  border-bottom: none;
-  font-size: 16px;
-}
-.nav-tabs.underline-tabs li.active > a {
-  background-color: #fafafa;
-  outline: none;
-  border: none;
-  border-bottom: 5px solid #173e43;
-}
-.nav-tabs.underline-tabs li.active > a:hover,
-.nav-tabs.underline-tabs li.active > a:focus {
-  background-color: #fafafa;
-  border: none;
-  border-bottom: 5px solid #3fb0ac;
-}
-.nav-tabs.underline-tabs li > a {
-  outline: none;
-  border: none;
-}
-.nav-tabs.underline-tabs li > a:hover,
-.nav-tabs.underline-tabs li > a:focus {
-  border: none;
-  background-color: #fafafa;
-  border-bottom: 5px solid #3fb0ac;
-}
-.side-tab-panel .tab-content {
-  background-color: #fff;
-  border: 1px solid #e4e4e4;
-  border-top: 0;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-.prologe .rating {
-  display: flex;
-  justify-content: flex-end;
-  color: #fae596;
-}
-.default-book-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-.default-book-list .book {
-  width: 30%;
-  margin-top: 10px;
-  margin-right: 10px;
-  display: flex;
-  padding: 15px;
-}
-@media (min-width:520px) and (max-width:940px) {
-  .default-book-list .book {
-    width: 48%;
-  }
-}
-@media (max-width:519px) {
-  .default-book-list .book {
-    width: 98%;
-  }
-}
-.default-book-list .book .info {
-  margin-left: 10px;
-}
-.default-book-list .book .info .title {
-  min-width: 120px;
-  max-width: 480px;
-  font-size: 14px;
-  font-weight: 500;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.default-book-list .book .icon img {
-  height: 80px;
-}
-.material-icons {
-  float: right;
-  text-align: center;
-  padding: 12px;
-  color: black;
-  text-decoration: none;
-  font-size: 48dp;
-}
-.header-content {
-  font-family: Lora;
-}
-.welcome-whatis--body {
-  font-family: Raleway;
-  width: 400px;
-  margin: auto;
-  width: 50%;
-  padding-bottom: 30px;
-}
-.index-search {
-  width: 400px;
-  padding-bottom: 120px;
-}
-.img:Bookshelf {
-  max-width: 100%;
-  max-height: 100%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.bookshelf-image {
-	
+  padding-top: 70px;
 }
