--- a/templates/anon_group.html
+++ b/templates/anon_group.html
@@ -1,71 +1,53 @@
-	<!DOCTYPE html>
-	<html>
-		<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet/less" href="../css/styles.less">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-		<link rel="icon" type="image/png" href="/prologes/img/favicon.png" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-		</head>
-		<body>
-		<!-- NAVBAR -->
-		<header class="header">
-			<nav role="navigation" class="navbar navbar-custom navbar-default navbar-fixed-top">
-			<div class="container-fluid">
-						<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-						<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-						</button>
-						<a href="#" class="navbar-brand-image"><img src="../img/prologes.png" alt="logo" class="navlogo logo"/></a>
-				</div>
-				<!-- Collection of nav links, forms, and other content for toggling -->
-				<div id="navbarCollapse" class="collapse navbar-collapse">
-						
-						<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown">
-					<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-						<div class="lang-selector">
-							EN				</div>
-					</a>
-					<ul role="menu" class="dropdown-menu">
-						<li>
-							<a href="#">English</a>
-							</li>
-						<li>
-							<a href="#">Español</a>
-							</li>
-					</ul>
-				</li>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet/less" href="../css/styles.less">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+<link rel="icon" type="image/png" href="/prologes/img/favicon.png" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      	rel="stylesheet">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+</head>
 		
-				<li>
-					<form role="search" class="navbar-form navbar-right" action="/prologes/search">
-							<div class="input-group">
-								<input type="text" placeholder="Search" name="q" class="form-control input-sm">
-								<span class="input-group-btn">
-									<button class="btn btn-default input-sm" type="submit">
-										<span class="fas fa-search"></span>
-									</button>
-								</span>
-							</div>
-					</form>
-				</li>
-						
-								<!-- NOT LOGGED IN -->
-											<li><a href="#">Log in</a></li>
-				<!-- LOGGED IN -->
-								</ul>
-				</div>
-				</div>
-			</nav>
-		</header>
+<body background="../img/regal.png">
+			
+		<!-- NAVBAR -->
+	<nav class="navbar navbar-expand-lg">
+		<a class="navbar-brand" href="#">
+			<img src="../img/prologes.png" alt="logo" class="navlogo logo"/>
+		</a>
+		
+<div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+
+	<ul class="navbar-nav navbar-right nav-flex-icons">
+		<li class="nav-item">
+			<a class="nav-link">
+				<i class="material-icons">person</i>
+			</a>
+		</li>
+		
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
+				  aria-expanded="false">
+				 <i class="material-icons">language</i>
+			</a>
+	<ul role="menu" class="dropdown-menu">
+		<li>
+			<a href="#">English</a>
+		</li>
+		<li>
+			<a href="#">Español</a>
+		</li>
+	</ul>
+		</li>
+	</ul>
+</div>
+	</nav>	
 		
 		<!-- MAIN BODY -->
 		<div class="container">
@@ -92,6 +74,7 @@
 								<div class="">
 									<!-- -->
 									<div class="title editable" id="club-title--editable">
+										<span>Name of club</span>
 									</div>
 									<div class="handle" id="club-handle--editable">
 										<span>@theHandleOfTheGroup</span>
