--- a/templates/anon_home.html
+++ b/templates/anon_home.html
@@ -16,7 +16,7 @@
 	
 <body background="../img/regal.png">
 	
-	<nav class="navbar navbar-expand-lg">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
   		<a class="navbar-brand" href="#">
 			<img src="../img/prologes.png" alt="logo" class="navlogo logo"/>
 		</a>
