--- a/css/styles.less
+++ b/css/styles.less
@@ -73,15 +73,20 @@ body {
 		border-radius: 0 !important;
 
 		.logo {	
-    		max-height: 35px;
-			float: left;
-			padding-left: 2px;
-			margin-top: -7px;
+    		max-height: 25px;
 		}
 		
 		.navbar-nav {
 			list-style-type: none;
 			padding-right: 13px; 
+		}
+		
+		.navbar-nav > li > a {
+ 			line-height: 55px;
+		}
+		
+		i.icon-black {
+    		color: black;
 		}
 	}
 
