--- a/templates/anon_home.html
+++ b/templates/anon_home.html
@@ -6,7 +6,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 <link rel="icon" type="image/png" href="/prologes/img/favicon.png" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -26,14 +25,14 @@
     <ul class="navbar-nav navbar-right nav-flex-icons">
 		<li class="nav-item">
         	<a class="nav-link">
-          		<i class="material-icons">person</i>
+          		<i class="material-icons icon-black">person</i>
         	</a>
       	</li>
 		
 		<li class="nav-item dropdown">
         	<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">
-         		 <i class="material-icons">language</i>
+         		 <i class="material-icons icon-black">language</i>
         	</a>
       <ul role="menu" class="dropdown-menu">
 		<li>
@@ -66,7 +65,7 @@
 		</div>
 		
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+			<div class="col-md-4 col-md-offset-4">
 				<div class="index-search center-block">
 					<form class="" action="search">
 						<div class="input-group">
@@ -84,13 +83,16 @@
 	</div>
 	
 <footer>
-	<div class="container">
-		<h5>Prologes &copy; 2019 
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				Prologes &copy; 2019 
 			<ul class="pull-right list-inline">
 				<li><a href="about">About us</a></li>
 				<li><a href="privacy">Terms and privacy</a></li>
 			</ul>
-		</h5>
+			</div>
+		</div>
 	</div>
 </footer>
 </body>
