--- a/css/comments.less
+++ b/css/comments.less
@@ -15,7 +15,7 @@
 		align-items: flex-end;
 		justify-content: flex-end;
 
-		.actions-container {
+		.actions {
 			display: flex;
 			flex-direction: column;
 
