--- a/templates/user_book.html
+++ b/templates/user_book.html
@@ -127,7 +127,7 @@
               <span class="fas fa-pen-nib"></span>
             </div>
             <!-- READING-->
-            <div class="action" tabindex="0" role="button" title="Add to readings">
+            <div class="action  disabled" tabindex="0" role="button" title="Add to readings">
               <span class="fas fa-book-open"></span>
             </div>
           </div>
@@ -235,7 +235,7 @@
                     <textarea id="comment--textarea" placeholder="Write a comment..."></textarea>
                     <div class="error-area" id="comment--error-area"></div>
                   </div>
-                  <div class="actions-container">
+                  <div class="actions">
                     <button type="button" class="btn main-btn" id="comment--submit">Post</button>
                   </div>
                 </div>
