--- a/templates/forgotten.html
+++ b/templates/forgotten.html
@@ -22,7 +22,7 @@
 </head>
 <body class="body-background">
   <div class="forgotten full-body">
-    <div class="centered-section">
+    <div class="centered-section opaque">
       <div class="header">
         <a href="#">
           <img src="../img/prologes.png">
