--- a/templates/registration.html
+++ b/templates/registration.html
@@ -18,7 +18,7 @@
 </head>
 <body class="body-background">
   <div class="forgotten full-body">
-    <div class="centered-section">
+    <div class="centered-section opaque">
       <div class="header">
         <a href="#">
           <img src="../img/prologes.png">
