--- a/templates/anon_group.html
+++ b/templates/anon_group.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<meta charset="UTF-8">
+		
 		<link rel="stylesheet/less" href="../css/styles.less">
 		<link rel="stylesheet/less" href="../css/group.less">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -13,6 +14,8 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 				rel="stylesheet">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		
+		<script type="text/javascript" src="../scripts/group.js"></script>
 	</head>
 		
 	<body background="../img/regal.png">
@@ -102,7 +105,7 @@
 				</section>
 			</div>
 
-			<!-- Center panel (comments) -->
+			<!-- Center panel (Club info and comments section) -->
 			<div class="col-md-6">
 						
 							<section class="main-group" id="main-group--info">
@@ -154,14 +157,14 @@
 									<a href="#tab-reading" data-toggle="tab" id="tab-reading--anchor">Reading</a>
 								</li>
 								<li>
-									<a href="#tab-wishlist" data-toggle="tab" id="tab-wishlist--anchor">Up Next</a>
+									<a href="#tab-up_next" data-toggle="tab" id="tab-wishlist--anchor">Up Next</a>
 								</li>
 							</ul>
 					
 						<div class="tab-content">
 							
 							<!-- Currently reading-->
-							<div id="tab-reading" class="tab-pane active fade in">
+							<div class="tab-pane active fade in" id="tab-reading">
 								
 								<div class="reading-panel">
 								
@@ -175,63 +178,29 @@
 										<span class="author">Author</span>
 									</div>
 										
-									<div class="panel-group">
+									<div class="panel-group" id="reading-panel-group" role="tablist">
   										<div class="panel">
-    										<div class="panel-heading">
+											<div class = "panel-heading" role="tab">
       											<h4 class="panel-title">
-													<div class="what_else">
-        												<a data-toggle="collapse" href="#else-reading-panel">See what else we are reading
-															<i class="material-icons icon-black">keyboard_arrow_down</i>
-														</a>
-													</div>
-      											</h4>	 
-    										</div>
+        											<a role="button" data-toggle="collapse" data-parent="#reading-panel-group" href="#else-reading-panel">
+														See what else we are reading
+													</a>
+      											</h4>
+											</div>
 											
-											<div id="else-reading-panel" class="panel-collapse collapse">
+											<div class="panel-collapse collapse" role="tabpanel" id="else-reading-panel">
 
-												<div class="what_else_list">
-										<!-- what else we are also reading -->
-										<div class="book">
-											<div class="icon">
-												<img src="../img/book_clear.png" alt= "book">
-											</div>
-											<div class="info">
-												<span class="title">Title of the book</span>
-												<span class="author">Author 1, Author 2</span>
-											</div>
-										</div>
-										<!-- Sample books -->
-										<div class="book">
-											<div class="icon">
-												<img src="../img/book_clear.png" alt= "book">
-											</div>
-											<div class="info">
-												<span class="title">Title of the book</span>
-												<span class="author">Author 1, Author 2</span>
-											</div>
-										</div>
-										<!-- Sample books -->
-										<div class="book">
-											<div class="icon">
-												<img src="../img/book_clear.png" alt= "book">
-											</div>
-											<div class="info">
-												<span class="title">Title of the book</span>
-												<span class="author">Author 1, Author 2</span>
-											</div>
-										</div>
-										<!-- Sample books -->
-										<div class="book">
-											<div class="icon">
-												<img src="../img/book_clear.png" alt= "book">
-											</div>
-											<div class="info">
-												<span class="title">Title of the book</span>
-												<span class="author">Author 1, Author 2</span>
-											</div>
-										</div>
-
-									</div>
+												<div class="panel-body">
+										
+													<!-- Sample books -->
+													<div class="book">
+														<img src="../img/book_clear.png" alt="book" class="center-block">
+														
+														<span class="title center-block">Title of the book</span>
+														<span class="author center-block">Author 1, Author 2</span>
+														
+													</div>
+												</div>
 												
 											</div>
   										</div>
@@ -254,15 +223,17 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					Prologes &copy; 2019 
-					<ul class="pull-right list-inline">
-						<li>
-							<a href="about">About us</a>
-						</li>
-						<li>
-							<a href="privacy">Terms and privacy</a>
-						</li>
-					</ul>
+					<div class="footer">
+						Prologes &copy; 2019 
+						<ul class="pull-right list-inline">
+							<li>
+								<a href="about">About us</a>
+							</li>
+							<li>
+								<a href="privacy">Terms and privacy</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
